# mango

./: .clang-tidy  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cpp-build-and-test.yml
lib/: Scanner.cpp  Scanner.hpp  Yara.cpp  Yara.hpp
src/: main.cpp
tests/: CMakeLists.txt  test_yara.cpp
tests/files/: test_invalid_rule.yara
yara/: test.yara
